# rustasata

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: benchmark.rs
scripts/: clean_satlib.sh  tests.sh
src/: bin.rs  clause.rs  decision_provider.rs  lib.rs  literal.rs  main.rs  parser.rs  solver.rs  variable.rs
test/: LICENSE
tests/: tests.rs
